[gd_scene load_steps=10 format=3 uid="uid://bt7jqruovtfdo"]

[ext_resource type="Script" path="res://Scripts/Game8/Player.gd" id="1_6fina"]
[ext_resource type="PackedScene" uid="uid://blx107govkdei" path="res://Assets/Models/Game8/star_wars_tie_fighter/scene.gltf" id="2_ry0au"]
[ext_resource type="Texture2D" uid="uid://beu7rib7pa3lp" path="res://Assets/Sprites/Game8/crosshair1.png" id="3_ytqvl"]
[ext_resource type="Texture2D" uid="uid://cna37jad0g1o5" path="res://Assets/Sprites/Game8/crosshair2.png" id="4_dnmq6"]
[ext_resource type="AudioStream" uid="uid://bqu3e7fwovyj3" path="res://Assets/Sounds/Game8/blaster.mp3" id="5_jclbx"]
[ext_resource type="AudioStream" uid="uid://cdd20f0r4faww" path="res://Assets/Sounds/Game8/flying1.mp3" id="6_6jfiv"]
[ext_resource type="AudioStream" uid="uid://bj3nb5jgx0q13" path="res://Assets/Sounds/Game8/flying2.mp3" id="7_nueq0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cs3ph"]
size = Vector3(3, 4.5, 3.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_b24i2"]
radius = 5.0

[node name="Player" type="CharacterBody3D"]
collision_mask = 0
script = ExtResource("1_6fina")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cs3ph")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_ry0au")]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0)

[node name="Gun0" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="Gun1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
texture = ExtResource("3_ytqvl")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
texture = ExtResource("4_dnmq6")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_b24i2")

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jclbx")
volume_db = -5.0

[node name="Roll1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6jfiv")
volume_db = -10.0

[node name="Roll2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nueq0")
volume_db = -10.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
